--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сложно сосредоточиться</title>
-    <link rel="stylesheet" href="./styles/globals.css">
+    <meta name="color-scheme" content="dark light">
     <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
     <link rel="icon" href="./images/favicon.ico">
-    <link rel="apple-touch-icon" href="./images/favicon.svg">
-    <meta name="color-scheme" content="dark light">
+    <link rel="icon" href="./images/favicon.svg" />
+    <link rel="apple-touch-icon" href="/images/mobile-icon.png" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -79,7 +80,7 @@
         </article>
       </section>
       <section class="concentration_section">
-        <h3 class="section_title">
+        <h3 class="section_title concentration_title">
           Что снижает концентрацию внимания?
         </h3>
         <article class="multitasking_article">
