--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h4 class="title-decor subtitle">
           Дофамин
         </h4>
-        <p class="text_article">
+        <p class="text_article concentration_text ">
           С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.        </p>
         </article>
       </section>
